{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 102,
  "lineage": "e4fb3030-d898-998a-73b8-3be912626e53",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "isolated_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:subnet/subnet-0c8c946f1501d8bd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 25,
            "cidr_block": "10.37.58.96/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c946f1501d8bd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299770864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "isolated-subnet"
            },
            "vpc_id": "vpc-083b2372ea55749a4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:subnet/subnet-03acac5efa3ed39e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 12,
            "cidr_block": "10.37.58.32/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03acac5efa3ed39e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299770864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-083b2372ea55749a4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:subnet/subnet-0c6d45ee5ab4e80f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 13,
            "cidr_block": "10.37.58.64/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6d45ee5ab4e80f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299770864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-083b2372ea55749a4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:subnet/subnet-0b9a2fd0bebdce70e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 21,
            "cidr_block": "10.37.58.0/27",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9a2fd0bebdce70e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "615299770864",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-083b2372ea55749a4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:vpc/vpc-083b2372ea55749a4",
            "cidr_block": "10.37.58.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-062e00668caf5c972",
                "cidr_block": "10.37.58.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09341b7dbf01d96d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-083b2372ea55749a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09aca1aa11bb84edf",
            "owner_id": "615299770864",
            "tags": {
              "CreatedBy": "ghoggard@verticalrelevance.com",
              "Name": "mock-gpn-vpc",
              "PrincipalId": "AROAY6QVZNHYPEOAXAKPX"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "appsync_test_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:615299770864:instance/i-0672bc3ccdff21b46",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_instance_profile",
            "id": "i-0672bc3ccdff21b46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe9970294298a017",
            "private_dns": "ip-10-37-58-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.37.58.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ddde2300a9bdf5a9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03acac5efa3ed39e6",
            "tags": {
              "Name": "AppSync-Test-Instance"
            },
            "tags_all": {
              "Name": "AppSync-Test-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05868dce088ec1ae2"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.bastion_sg",
            "aws_security_group.private_instance_sg",
            "data.aws_subnet.private_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:615299770864:instance/i-0ee1eddc6723fb43b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee1eddc6723fb43b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b942e367ae78ac97",
            "private_dns": "ip-10-37-58-24.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.37.58.24",
            "public_dns": "ec2-54-84-16-207.compute-1.amazonaws.com",
            "public_ip": "54.84.16.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf3ceef873a8400a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b9a2fd0bebdce70e",
            "tags": {
              "Name": "BastionHost"
            },
            "tags_all": {
              "Name": "BastionHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de2df66a91a6926e"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f91d93413f548c41",
            "route_table_id": "rtb-09aca1aa11bb84edf",
            "subnet_id": "subnet-03acac5efa3ed39e6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:security-group/sg-0de2df66a91a6926e",
            "description": "Allow SSH access to Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de2df66a91a6926e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "615299770864",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-083b2372ea55749a4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:security-group/sg-05868dce088ec1ae2",
            "description": "Allow internal communication between Bastion and Private instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05868dce088ec1ae2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de2df66a91a6926e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private_instance_sg",
            "name_prefix": "",
            "owner_id": "615299770864",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-083b2372ea55749a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "appsync_allow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.37.58.0/24"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-644276063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05868dce088ec1ae2",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.private_instance_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appsync_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:615299770864:vpc-endpoint/vpce-0695831cf90503f51",
            "dns_entry": [
              {
                "dns_name": "vpce-0695831cf90503f51-q3o5e7ad.appsync-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0695831cf90503f51-q3o5e7ad-us-east-1a.appsync-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0695831cf90503f51-q3o5e7ad-us-east-1c.appsync-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0695831cf90503f51-q3o5e7ad-us-east-1b.appsync-api.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "appsync-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03293762WP7R75BA5DUB"
              },
              {
                "dns_name": "*.appsync-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03293762WP7R75BA5DUB"
              },
              {
                "dns_name": "appsync-realtime-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07590791XMSUBJQXSFKX"
              },
              {
                "dns_name": "*.appsync-realtime-api.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07590791XMSUBJQXSFKX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0695831cf90503f51",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04816a5fea0b34093",
              "eni-04bf96a6cbef8d863",
              "eni-065fd6a2463d42e75"
            ],
            "owner_id": "615299770864",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aeb477814afe0f2b"
            ],
            "service_name": "com.amazonaws.us-east-1.appsync-api",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.37.58.26",
                "subnet_id": "subnet-0b9a2fd0bebdce70e"
              },
              {
                "ipv4": "10.37.58.60",
                "subnet_id": "subnet-03acac5efa3ed39e6"
              },
              {
                "ipv4": "10.37.58.89",
                "subnet_id": "subnet-0c6d45ee5ab4e80f2"
              }
            ],
            "subnet_ids": [
              "subnet-03acac5efa3ed39e6",
              "subnet-0b9a2fd0bebdce70e",
              "subnet-0c6d45ee5ab4e80f2"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-083b2372ea55749a4"
          },
          "dependencies": [
            "data.aws_subnet.private_subnet_1",
            "data.aws_subnet.private_subnet_2",
            "data.aws_subnet.public_subnet",
            "data.aws_vpc.existing_vpc"
          ]
        }
      ]
    }
  ]
}